samples/_failures_safe/1761073676_9efb34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8e367c6.c: In function ‘main’:
./samples/SAFE/__tmp_b8e367c6.c:171:9: error: expected declaration or statement at end of input
  171 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_b8e367c6.c:171:9: error: expected declaration or statement at end of input
